[gd_scene load_steps=13 format=3 uid="uid://dclasu6g2as6g"]

[ext_resource type="Script" path="res://game/main.gd" id="1_mbbcd"]
[ext_resource type="PackedScene" uid="uid://cc6gry5jybsfx" path="res://background/fondo_a.tscn" id="2_6b2xj"]
[ext_resource type="FontFile" uid="uid://d2lrxcq32ew71" path="res://recursos/tipografy/FontsFree-Net-BroadwayD-1.ttf" id="3_q3uxg"]
[ext_resource type="PackedScene" uid="uid://8v8r8xh5kwx0" path="res://background/titulo.tscn" id="4_hr0b0"]
[ext_resource type="AudioStream" uid="uid://bnu2pnsky81wg" path="res://recursos/sound/game_music.mp3" id="5_v0n7l"]
[ext_resource type="Script" path="res://menu/pause/pause.gd" id="6_vp8cq"]
[ext_resource type="AudioStream" uid="uid://5fgrgxopfgf" path="res://recursos/sound/pause_off.mp3" id="7_wug0n"]
[ext_resource type="AudioStream" uid="uid://n3gko7u1by86" path="res://recursos/sound/pause_on.mp3" id="8_x2r2n"]
[ext_resource type="AudioStream" uid="uid://bor8nyjm32k2a" path="res://recursos/sound/button.mp3" id="9_vai23"]
[ext_resource type="Texture2D" uid="uid://bacolqswd25dm" path="res://recursos/texts/text_paused.png" id="10_myoll"]
[ext_resource type="FontFile" uid="uid://mjadfyp75mk6" path="res://recursos/tipografy/Lato-Regular.ttf" id="11_ggpad"]

[sub_resource type="SystemFont" id="SystemFont_6w5qh"]

[node name="main" type="Node2D"]
script = ExtResource("1_mbbcd")

[node name="fondo1" parent="." instance=ExtResource("2_6b2xj")]
position = Vector2(-1, -4)

[node name="label_stage" type="Label" parent="fondo1"]
offset_left = 10.0
offset_top = 12.0
offset_right = 89.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("3_q3uxg")
text = "STAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" parent="." instance=ExtResource("4_hr0b0")]

[node name="musica_base" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_v0n7l")
volume_db = -13.811
pitch_scale = 0.8
autoplay = true
bus = &"Music"

[node name="menu_text_stages" type="Popup" parent="."]
transparent_bg = true
size = Vector2i(746, 109)
visible = true
transparent = true

[node name="Label" type="Label" parent="menu_text_stages"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -173.0
offset_bottom = 109.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_q3uxg")
theme_override_font_sizes/font_size = 90
horizontal_alignment = 1

[node name="menu_pause" type="Node" parent="."]
process_mode = 3
script = ExtResource("6_vp8cq")

[node name="sound_pause_off" type="AudioStreamPlayer2D" parent="menu_pause"]
stream = ExtResource("7_wug0n")
bus = &"SFX"

[node name="sound_pause_on" type="AudioStreamPlayer2D" parent="menu_pause"]
stream = ExtResource("8_x2r2n")
bus = &"SFX"

[node name="VBoxContainer" type="VBoxContainer" parent="menu_pause"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -83.0
offset_right = 91.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2

[node name="buttons" type="AudioStreamPlayer2D" parent="menu_pause/VBoxContainer"]
stream = ExtResource("9_vai23")
bus = &"SFX"

[node name="text_paused" type="Sprite2D" parent="menu_pause/VBoxContainer"]
position = Vector2(88, -37)
scale = Vector2(0.177609, 0.204762)
texture = ExtResource("10_myoll")

[node name="button_menu" type="Button" parent="menu_pause/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_6w5qh")
theme_override_font_sizes/font_size = 34
text = "MENU"

[node name="button_restart" type="Button" parent="menu_pause/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_6w5qh")
theme_override_font_sizes/font_size = 34
text = "RESTART"

[node name="button_exit" type="Button" parent="menu_pause/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_6w5qh")
theme_override_font_sizes/font_size = 34
text = "EXIT"

[node name="info_text2" type="Label" parent="menu_pause/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_ggpad")
text = "Esc key to return"
horizontal_alignment = 1

[node name="info_text" type="Label" parent="."]
offset_left = 25.0
offset_top = 674.0
offset_right = 171.0
offset_bottom = 697.0
theme_override_fonts/font = ExtResource("11_ggpad")
text = "Esc key for pause"

[connection signal="live" from="." to="Control" method="_on_main_live"]
[connection signal="loss" from="." to="Control" method="_on_main_loss"]
[connection signal="rocas_falta_container" from="." to="Control" method="_on_main_rocas_falta_container"]
[connection signal="score_total" from="." to="Control" method="_on_main_score_total"]
[connection signal="stage" from="." to="fondo1" method="_on_main_stage"]
[connection signal="pressed" from="menu_pause/VBoxContainer/button_menu" to="menu_pause" method="_on_button_pressed"]
[connection signal="pressed" from="menu_pause/VBoxContainer/button_restart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="menu_pause/VBoxContainer/button_exit" to="menu_pause" method="_on_button_exit_pressed"]
